--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                         <sections>
                             <tableViewSection headerTitle="Restaurant Types" id="7CW-y1-mYt">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="restaurantCell" textLabel="4hc-Kh-jJf" style="IBUITableViewCellStyleDefault" id="vDW-47-RXy">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="restaurantCell" textLabel="4hc-Kh-jJf" style="IBUITableViewCellStyleDefault" id="vDW-47-RXy">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vDW-47-RXy" id="qnA-O0-QmJ">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -73,6 +73,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="RC0-bd-Plz" kind="show" id="KIL-Sb-1lr"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -119,21 +122,24 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="fhh-XF-jAH"/>
+                    <connections>
+                        <outlet property="restaurantTypeCell" destination="vDW-47-RXy" id="FBd-FE-U52"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lb2-t0-WeY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="863" y="898"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Restaurant Type Table View Controller-->
         <scene sceneID="cZU-0A-vyX">
             <objects>
-                <tableViewController id="RC0-bd-Plz" sceneMemberID="viewController">
+                <tableViewController id="RC0-bd-Plz" customClass="RestaurantTypeTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r0g-bR-bKD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="66C-AP-UeE">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="foodTypeCell" id="66C-AP-UeE">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="66C-AP-UeE" id="69T-yb-RIY">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -145,6 +151,7 @@
                             <outlet property="delegate" destination="RC0-bd-Plz" id="iCZ-et-Q7K"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="zfc-hc-GZn"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TnC-Db-DAi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
