--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -321,7 +321,7 @@
             </objects>
             <point key="canvasLocation" x="3553" y="1199"/>
         </scene>
-        <!--Wiki Collection View Controller-->
+        <!--Points of Interest-->
         <scene sceneID="p2A-KN-NIb">
             <objects>
                 <collectionViewController id="Sov-ms-rNH" customClass="WikiCollectionViewController" sceneMemberID="viewController">
@@ -329,7 +329,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c8D-Pc-txF">
-                            <size key="itemSize" width="135" height="174"/>
+                            <size key="itemSize" width="135" height="170"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -339,15 +339,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="135" height="174"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="135" height="170"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" tag="99" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8EC-Pq-k26">
                                             <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Re1-Ax-0v1">
-                                            <rect key="frame" x="8" y="153" width="109" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Re1-Ax-0v1">
+                                            <rect key="frame" x="8" y="134" width="119" height="36"/>
+                                            <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -365,7 +367,13 @@
                             <outlet property="delegate" destination="Sov-ms-rNH" id="0TE-al-RFM"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="Bi1-9J-qod"/>
+                    <navigationItem key="navigationItem" title="Points of Interest" id="Bi1-9J-qod">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="RM0-dL-B3v">
+                            <connections>
+                                <action selector="doneButtonTapped:" destination="Sov-ms-rNH" id="R3Q-Bz-Uwk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vvA-7h-gZf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
