--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -335,7 +335,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WikiCell" id="1Wu-Ym-gYZ">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WikiCell" id="1Wu-Ym-gYZ" customClass="WikiCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -358,6 +358,8 @@
                                 </view>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
+                                    <outlet property="imageView" destination="8EC-Pq-k26" id="m9J-BE-35E"/>
+                                    <outlet property="titleLabel" destination="Re1-Ax-0v1" id="mTg-49-NqL"/>
                                     <segue destination="vLH-Qi-Iv2" kind="show" id="0p4-Ny-eXw"/>
                                 </connections>
                             </collectionViewCell>
